--- a/landing/style/main.css
+++ b/landing/style/main.css
@@ -7,7 +7,7 @@
 body{
 	background-color: #B9D8D6;
 	color: #004268;
-	padding-bottom: 1000px;
+	padding-bottom: 200px;
 }
 h1, h2, h3{
 	font-family: 'Arbutus Slab', serif;
@@ -25,12 +25,15 @@ h3{
 img{
 	width: 100%;
 }
+a{
+	text-decoration: none;
+}
 .sans{
 	font-family: 'Inter', sans-serif;
 }
 .float_link{
 	font-family: 'Arbutus Slab', serif;
-	font-size: 14px;
+	font-size: 14px;ㄣ
 	font-weight: normal;
 	position: absolute;
 	bottom: 0;
@@ -44,6 +47,21 @@ img{
 	color: #B9D8D6;
 	transition: all .25s;
 }
+.inline_block{
+	display: inline-block;
+	vertical-align: top;
+}
+.half_width{
+	width: calc( (100% - 80px) / 2 );
+}
+.inline_block.half_width:first-child{
+	margin-right: 80px;
+}
+.img_holder{
+	overflow: hidden;
+	/*height: 50%;*/
+}
+
 #statement_ctner{
 	padding-left: 60px;
 	padding-right: 60px;
@@ -80,19 +98,118 @@ img{
 .unviewed .caption{
 	color: #fff;
 }
+.image_bg{
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	transition: all .5s;
+}
 
-/* ======= landing ========= */
+/* ========= nav =========== */
+#nav{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	max-width: 100%;
+	z-index: 1000;
+	padding: 30px 40px;
+	transition: background-color 1s;
+	font-weight: bold;
+	font-size: 14px;
+}
+#nav_bg{
+	position: absolute;
+	width: 100%;
+	max-width: 100vw;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: #004268;
+	transform: translate(0, -100%);
+	/*transition: transform 0s, opacity .5s;*/
+	transition: transform .5s, opacity 0s;
+	z-index: -2;
+	/*opacity: 0;*/
+}
+#nav.bg #nav_bg{
+	/*transition: transform .5s, opacity 0s;*/
+	transform: translate(0, 0);
+	/*opacity: 1;*/
+}
+#nav_left{
+	float: left;
+}
+#nav_center{
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, -10px);
+}
+#nav_right{
+	float: right;
+}
+.nav_btn_ctner{
+	position: relative;
+	display: inline-block;
+	line-height: 2em;
+	/*border-bottom: 2px solid transparent;*/
+	cursor: pointer;
 
-.landing_section{
+}
+.nav_btn_base{
+	padding: 0px 15px;
+	/*background-color: #B9D8D6;*/
+	color: #004268;
+	cursor: pointer;
+
+}
+.nav_btn_bg{
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 0;
+	background-color: #B9D8D6;
+	z-index: -1;
+}
+.nav_btn_mask{
+	color: #fff;
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	height: 35px;
+	padding: 0px 15px;
+	cursor: pointer;
+}
+.nav_btn_ctner:hover .nav_btn_mask{
+	height: 0;
+	transition: all .35s;
+}
+.nav_btn_ctner:hover .nav_btn_bg{
+	height: 28px;
+	transition: all .35s;
+}
+
+#logo_tb{
+	width: 90px;
+}
+
+
+/* ======= opening ========= */
+
+.opening_section{
 	position: relative;
 }
-.landing_section h1, 
-.landing_section p
+.opening_content h1, 
+.opening_content p
 {
 	padding: 0 60px;
 	text-shadow: 0px 0px 35px rgba(8,67,104,.5);
 }
-.landing_bg_holder{
+.opening_bg_holder{
 	position: absolute;
 	z-index: -10;
 	top: 0;
@@ -100,7 +217,7 @@ img{
 	width: 100%;
 	height: 100%;
 }
-.landing_bg{
+.opening_bg{
 	background-image: url(../asset/images/landing.jpg);
 	background-size: auto 230vh;
 	background-repeat: no-repeat;
@@ -114,11 +231,11 @@ img{
 	position: relative;
 	color: #fff;
 }
-#landing_logo_ctner{
+#opening_logo_ctner{
 	height: 100vh;
 	position: relative;
 }
-#landing_logo{
+#opening_logo{
 	width: 200px;
 	position: absolute;
 	left: 50%;
@@ -126,38 +243,36 @@ img{
 	transform: translate( -50%, -50% );
 }
 
-#landing_bg_1{
+#opening_bg_1{
 	height: 100vh;
 	
 }
-#landing_bg_1 + .background_overlay{
-	background-image: -webkit-linear-gradient( to bottom, rgba(186,217,215,0) 100px, rgba(186,217,215,.5) 300px);
-	background-image: linear-gradient( to bottom, rgba(186,217,215,0) 100px, rgba(186,217,215,.5) 300px);
-	mix-blend-mode: multiply;
+#opening_bg_1 + .background_overlay{
+	/*background-image: -webkit-linear-gradient( to bottom, rgba(8,67,104, 0) 100px, rgba(8,67,104, .2) 300px);*/
+	/*background-image: linear-gradient( to bottom, rgba(8,67,104, 0) 100px, rgba(8,67,104, .2) 300px);*/
+	/*mix-blend-mode: multiply;*/
 	position: absolute;
 	width: 100%;
 	height: calc( 100vh + 300px );
 	left: 0;
 	bottom :0;
 }
-#landing_bg_2{
+#opening_bg_2{
 	background-position: center -100vh;
 	background-image: 
 		url(../asset/images/landing.jpg);
 	background-image: 
 		url(../asset/images/landing.jpg);
-	/*background-image: -webkit-linear-gradient( to bottom, rgba(186,217,215,1), rgba(186,217,215,1)), url(../asset/images/landing.jpg);*/
-	/*background-image: linear-gradient( to bottom, rgba(186,217,215,1), rgba(186,217,215,1)), url(../asset/images/landing.jpg);*/
+	/*background-image: -webkit-linear-gradient( to bottom, rgba(186,217,215,1), rgba(186,217,215,1)), url(../asset/images/opening.jpg);*/
+	/*background-image: linear-gradient( to bottom, rgba(186,217,215,1), rgba(186,217,215,1)), url(../asset/images/opening.jpg);*/
 	background-blend-mode: multiply;
 	/*background-blend-mode: screen;*/
 	/*top: 30px;*/
 	/*transform: translate( 0, -30px );*/
 }
-#landing_bg_2 + .background_overlay{
-	background-image: 
-		-webkit-linear-gradient( to bottom, rgba(186,217,215,.25), rgba(8,67,104,1) 90%);
-	background-image: 
-		linear-gradient( to bottom, rgba(186,217,215,.25), rgba(8,67,104,1) 90%);
+#opening_bg_2 + .background_overlay{
+	/*background-image: -webkit-linear-gradient( to bottom, rgba(8,67,104, .2), rgba(0,66,104,1) 90%);*/
+	/*background-image: linear-gradient( to bottom, rgba(8,67,104, .2), rgba(0,66,104,1) 90%);*/
 	/*mix-blend-mode: multiply;*/
 	position: absolute;
 	width: 100%;
@@ -166,28 +281,45 @@ img{
 	top:0;
 }
 
-#landing_section_1{
+#opening_section_1{
 	/*padding-bottom: 200px;*/
 }
-#landing_section_1 .landing_content{
+#opening_section_1 .opening_content{
+	padding-top: 200px;
 	padding-bottom: 200px;
+	background-image: -webkit-linear-gradient( to bottom, rgba(8,67,104, 0) 50%, rgba(8,67,104, .5));
+	background-image: linear-gradient( to bottom, rgba(8,67,104, 0) 50%, rgba(8,67,104, .5));
 	
 }
 
-#landing_section_1 p{
+#opening_section_1 p{
 	margin-top: 60px;
 }
-#landing_section_2{
-	padding-top: 400px;
-	padding-bottom: 500px;
+#opening_section_2{
+	
+	
 }
 
-#landing_section_2 .landing_bg_holder{
-	/*z-index: -5;*/
+#opening_section_2 .opening_content{
+	padding-top: 200px;
+	padding-bottom: 400px;
+	background-image: -webkit-linear-gradient( to bottom, rgba(8,67,104, .5) 300px, rgba(0,66,104,.95) 90%);
+	background-image: linear-gradient( to bottom, rgba(8,67,104, .5) 300px, rgba(0,66,104,.95) 90%);
+}
+#opening_section_2 .opening_content h1{
+	width: 75%;
 }
 .image_holder{
 	position: relative;
 	overflow: hidden;
+}
+.image_holder + .image_holder{
+	margin-top: 20px;
+}
+.bg_image_holder{
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 .image_overlay{
 	width: 100%;
@@ -211,7 +343,99 @@ img{
 .slide_holder .body_text{
 	margin-top: 20px;
 }
+#landing_content{
+	padding: 100px 0;
+	background-color: #B9D8D6;
+	/*height: 2000px;*/
+	color: #004268;
+}
+.landing_section{
+	padding-left: 20px;
+	padding-right: 20px;
+}
+.landing_section + .landing_section{
+	margin-top: 80px;
+}
+.landing_section h1{
+	/*width: 50%;*/
+}
+.landing_section h1 + p{
+	/*margin-top: 50px;*/
+}
+#collective_statement {
+	position: relative;
+}
+#collective_statement > div{
+	position: relative;
+	margin-top: 50px;
+}
+#collective_statement > div:first-child .img_holder > img{
+	/*width: 60%;*/
+}
+#collective_statement_image_1{
+	height: 180px;
+	/*background-position: center;*/
+	/*background-size: 100%;*/
+}
+#collective_statement_image_1 .image_bg{
+	background-image: url(../asset/images/01.jpg);
+}
+#collective_statement_image_2{
+	height: 180px;
+}
+#collective_statement_image_2 .image_bg{
+	background-image: url(../asset/images/02.jpg);
+}
+#collective_statement_image_3{
+	height: 180px;
+}
+#collective_statement_image_3 .image_bg{
+	background-image: url(../asset/images/03.jpg);
+}
+#main_video{
+	padding-top: 20px;
+	padding-bottom: 20px;
+	/*margin-top: 60px;*/
+}
+#main_video > img{
 
+}
+.landing_section.landing_section_full{
+	padding-left: 0;
+	padding-right: 0;
+	box-sizing: content-box;
+}
+.video_ctner{
+	position: relative;
+	padding-left: 20px;
+	padding-right: 20px;
+	box-sizing: content-box;
+	background-color: #004268;
+}
+.video_ctner > div{
+	position: relative;
+}
+.video_ctner .image_overlay{
+	/*margin: 0 20px;*/
+}
+.play_btn{
+	width: 50px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	cursor: pointer;
+}
+.more_btn{
+	padding: 10px 20px;
+	background-color: #004268;
+	color: #fff;
+	max-width: 200px;
+	font-family: 'Arbutus Slab', serif;
+	margin: 0 auto;
+	margin-top: 20px;
+	cursor:pointer;
+}
 @media screen and (min-width: 830px){
 	h1{
 		font-size: 68px;
@@ -260,7 +484,12 @@ img{
 	.slide_holder .image{
 		filter: grayscale(1);
 	}
-	.slide_holder .image_holder:hover .image{
+	.image_holder + .image_holder{
+		margin-top: 35px;
+	}
+	.slide_holder .image_holder:hover .image,
+	.image_holder:hover .image_bg
+	{
 		filter: grayscale(0);
 	}
 	.slide_holder .body_text{
@@ -270,25 +499,86 @@ img{
 	.slide_holder:hover .body_text{
 		color: #004268;
 	}
-	.landing_bg{
+	.opening_bg{
 		background-size: 100vw auto;
 	}
-	#landing_bg_2{
-		/*background-position: center -50vw;*/
-		/*background-image: 
-			-webkit-linear-gradient( to bottom, rgba(186,217,215,1) 100vh, rgba(8,67,104,1) 150vh), 
+	#opening_bg_2{
+		background-image: 
+			-webkit-linear-gradient( to bottom, rgba(186,217,215,1) 100vw, rgba(0,66,104,1) 200vw), 
 			url(../asset/images/landing.jpg);
 		background-image: 
-			linear-gradient( to bottom, rgba(186,217,215,1) 100vh, rgba(8,67,104,1) 150vh), 
-			url(../asset/images/landing.jpg);*/
-		background-image: 
-			-webkit-linear-gradient( to bottom, rgba(186,217,215,1) 100vw, rgba(8,67,104,1) 200vw), 
+			linear-gradient( to bottom, rgba(186,217,215,1) 100vw, rgba(0,66,104,1) 200vw), 
 			url(../asset/images/landing.jpg);
-		background-image: 
-			linear-gradient( to bottom, rgba(186,217,215,1) 100vw, rgba(8,67,104,1) 200vw), 
-			url(../asset/images/landing.jpg);
+	}
+	#collective_statement_image_1{
+		height: 300px;
+	}
+	#collective_statement_image_2{
+		height: 300px;
+	}
+	#collective_statement_image_3{
+		height: 400px;
+	}
+	.image_bg{
+		filter: grayscale(1);
+	}
+	.landing_section{
+		padding-left: 60px;
+		padding-right: 60px;
+		
+	}
+	.landing_section + .landing_section{
+		margin-top: 150px;
+	}
+
+	#main_video{
+		padding-top: 40px;
+		padding-bottom: 40px;
+
+	}
+	.video_ctner{
+		padding: 40px 60px;
+	}
+	.video_ctner .image_overlay{
+		/*margin: 40px 60px;*/
+	}
+	.play_btn{
+		width: 75px;
+	}
+	.more_btn{
+		font-size: 14px;
+		line-height: 18px;
+		padding: 10px 30px;
 	}
 }
 @media screen and (min-width: 1300px){
-
+	#collective_statement > div{
+		position: relative;
+		margin-top: 75px;
+	}
+	#collective_statement_image_1{
+		width: 70%;
+		height: 300px;
+		float: right;
+	}
+	
+}
+@media screen and (min-width: 1500px){
+	/* container width fixed. start adjusting margin */
+	.landing_section{
+		width: 1380px;
+		margin: 0 auto;
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.landing_section.landing_section_full{
+		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
+	}
+	.landing_section.landing_section_full > div{
+		width: 1380px;
+		margin: 0 auto;
+		
+	}
 }
