--- a/history/style/main.css
+++ b/history/style/main.css
@@ -542,6 +542,9 @@ a{
 	margin-left: 30px;
 	width: 60px;
 }
+.unview_popup #footer{
+	padding-bottom: 60px;
+}
 @media screen and (min-width: 830px){
 	h1{
 		font-size: 68px;
