--- a/history/style/main.css
+++ b/history/style/main.css
@@ -27,6 +27,12 @@ img{
 a{
 	text-decoration: none;
 }
+button{
+	outline: none;
+	-webkit-appearance: none;
+	appearance: none;
+	font-size: 14px;
+}
 .serif{
 	font-family: 'Arbutus Slab', serif;
 }
@@ -42,28 +48,26 @@ a{
 	bottom: 0;
 	left: 0;
 }
-#popup > p,
+
 #popup > input{
 	display: inline-block;
 	vertical-align: middle;
 }
+.popup_prompt{
+	margin-bottom: 15px;
+}
 .popup_input{
-	/*position: absolute;*/
-	top: 0;
-	left: 0;
-	width: 0;
-	height: 0;
-	pointer-events: none;
-	opacity: 0;
-}
-.input_email .popup_input{
-	opacity: 1;
-	width: 449px;
-	height: initial;
+	width: 400px;
 	padding: 7px 10px;
-	transition: opacity .35s;
-	pointer-events: initial;
+	/*position: absolute;*/
+	/*top: 0;*/
+	/*left: 0;*/
+	/*width: 0;*/
+	/*height: 0;*/
+	/*pointer-events: none;*/
+	/*opacity: 0;*/
 }
+
 .input_email .popup_prompt{
 	opacity: 0;
 	width: 0;
